--- a/SocketChatView/src/app/home/home.page.html
+++ b/SocketChatView/src/app/home/home.page.html
@@ -1,50 +1,21 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Its a cool Chat
+      Contacts
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <ion-list>
+    <ion-item button *ngFor='let contact of contacts' [routerLink]="['/chat']" routerLinkActive="router-link-active" >
+      <ion-avatar >
+      <ion-img src={{contact.imageUri}}></ion-img>
 
-    <ion-text color='medium' text-center >
-      <p>Joined the chat as {{ currentUser}}</p>  
-    </ion-text>
-
-    <ion-row *ngFor='let message of messages'>
-      <ion-col size="9" *ngIf="message.user !== currentUser" class="message other-message">
-        <b>{{message.user}}</b>
-        <span>{{message.msg}}</span>
-        <div class="time" text-right><br>{{message.createdAt | date:'short'}}</div>
-      </ion-col>
-
-      <ion-col offset="3" size="9" *ngIf="message.user === currentUser" class="message my-message">
-          <b>{{message.user}}</b>
-          <span>{{message.msg}}</span>
-          <div class="time" text-right><br>{{message.createdAt | date:'short'}}</div>
-      </ion-col>
-
-    </ion-row>
-
-  </ion-grid>
-
+      </ion-avatar>
+      {{contact.name}}
+    </ion-item>
+  </ion-list>
 
 
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar color="light">
-    <ion-row align-items-center>
-      <ion-col size="10">
-        <ion-textarea auto-grow class="message input" rows="1" [(ngModel)]="message"></ion-textarea>
-      </ion-col>
-      <ion-col size="2">
-        <ion-button expand="block" fill="clear" color="primary" [disabled]="message === ''" class="msg-btn" (click)='sendMessage()' >
-          <ion-icon name='ios-send' slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-toolbar>
-</ion-footer>
