Created models, controllers and routes for users

--- a/SocketChatView/src/app/chat/chat.page.html
+++ b/SocketChatView/src/app/chat/chat.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
       <ion-buttons slot="start">
-          <ion-back-button class="show-back-button"></ion-back-button>
+          <ion-back-button ></ion-back-button>
         </ion-buttons>
     
 
@@ -13,7 +13,7 @@
         </ion-col>
         <ion-col size=9>
             <h2>Joe</h2>
-        </ion-col>
+        </ion-col> 
       </ion-row>
     
   </ion-toolbar>
